# lab2/contract/products-api/api.yaml
@@ -36,6 +36,12 @@ paths:
             application/json:
               schema:
                 $ref: 'schemas.yaml#/components/schemas/ApiErrorTo'
+        409:
+          description: Person with given passportId already exists
+          content:
+            application/json:
+              schema:
+                $ref: 'schemas.yaml#/components/schemas/CreatePerson409ErrorTo'
 
   /products:
     get:
@@ -95,6 +101,12 @@ paths:
             application/json:
               schema:
                 $ref: 'schemas.yaml#/components/schemas/ApiErrorTo'
+        409:
+          description: Product with given partNumber already exists
+          content:
+            application/json:
+              schema:
+                $ref: 'schemas.yaml#/components/schemas/ApiErrorTo'
 
   /products/{id}:
     get:
@@ -149,7 +161,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: 'schemas.yaml#/components/schemas/UpdateProduct404ResponseTo'
+                $ref: 'schemas.yaml#/components/schemas/ApiErrorTo'
 
     delete:
       operationId: deleteProductById
